Changed font-size to prevent overlap on iPhone

--- a/static/css/aises.css
+++ b/static/css/aises.css
@@ -36,7 +36,7 @@ a:hover {
 
 @media (max-width: 300px) {
     .navbar .brand {
-    		font-size: 34px;
+    		font-size: 30px;
     }
 }
 
